# ias

./: .gitignore  CMakeLists.txt  Makefile.am  README  README.md  ReleaseNotes  configure.ac  ias.conf.example  ias_brd2.conf  ias_snb.conf  ias_vmware.conf  meson.build  meson_options.txt  weston.ini.in  weston.ini.ivihmi  weston.service  weston.service.snbvmware
clients/: calibrator.c  clickdot.c  cliptest.c  confine.c  content_protection.c  desktop-shell.c  dnd.c  editor.c  eglinfo.c  es2gears.c  eventdemo.c  flower.c  fullscreen.c  gears.c  ias-metrics.c  ias-test-hmi.c  image.c  inputctrl.c  keyboard.c  layoutctrl.c  mediaplayer.c  meson.build  multi-resource.c  resizor.c  scaler.c  simple-clock.c  simple-damage.c  simple-dmabuf-drm.c  simple-dmabuf-egl.c  simple-dmabuf-v4l.c  simple-egl-ms.c  simple-egl.c  simple-ivi-share.c  simple-shm.c  simple-touch.c  smoke.c  stacking.c  subsurfaces.c  surfctrl.c  terminal.c  (+7 more)
clients/LayerManagerControl/: ExpressionInterpreter.cpp  SceneStore.h  analyze.cpp  commands.cpp  common.cpp  control.cpp  demo.cpp  print.cpp  scatter.cpp  sceneio.cpp  util.cpp
clients/MockNavi/: OpenGLES2App.cpp  OpenGLES2App.h  ShaderBase.cpp
clients/RemoteDisplay/: debug.h  encoder.c  encoder.h  input_receiver.c  input_receiver.h  input_sender.h  main.c  main.h  meson.build  remote-display-show.c  transport_plugin.h  transport_plugin_avb.c  transport_plugin_file.c  transport_plugin_stub.c  transport_plugin_tcp.c  transport_plugin_udp.c  udp_socket.h
clients/dma_test/: dma_test.c  meson.build  readme.txt
clients/ias_hmi/: ias_hmi_reg.cpp  ias_hmi_reg.h  meson.build
clients/ivi-input-api-test/: ilm_input_null_pointer_test.cpp  ilm_input_test.cpp
clients/ivi-layermanagement-api-test/: ilm_control_notification_test.cpp  ilm_control_test.cpp
clients/vmdisplay/: hyper_dmabuf.h  meson.build  vm-shared.h  vmdisplay-input.cpp  vmdisplay-parser.c  vmdisplay-parser.h  vmdisplay-server-hyperdmabuf.cpp  vmdisplay-server-hyperdmabuf.h  vmdisplay-server-network.cpp  vmdisplay-server-network.h  vmdisplay-server.cpp  vmdisplay-server.h  vmdisplay-shared.h  vmdisplay-wayland.c  vmdisplay.c  vmdisplay.h  wayland-drm-client-protocol.h  wayland-drm-protocol.c
clients/wl_base/: global_wayland.cpp  global_wayland.h  meson.build
clients/wl_disp/: display_wayland.cpp  display_wayland.h  meson.build
compositor/: ias-weston.desktop  main.c  meson.build  screen-share.c  systemd-notify.c  text-backend.c  weston-screenshooter.c  weston.h  xwayland.c
data/: meson.build
debian/: changelog  control  rules
debian/patches/: fix-libdrm-header.patch  revert-wayland-protocols-dependency-version.patch  series
desktop-shell/: shell.c
htmlparser/: scanner.c
ias-common/: ias-common.c  ias-common.h  ias-config.c  meson.build
ias-shell/: ias-hmi.c  ias-hmi.h  ias-relay-input.h  ias-shell.c  ias-shell.h  meson.build
include/: meson.build
include/libias/: ias-backend.h  ias-plugin-framework-definitions.h  ias-plugin-framework.h  meson.build
include/libweston/: backend-ias.h  config-parser.h  libweston.h  meson.build  weston-log.h
ivi-shell/: ivi-layout.c  ivi-shell.c  ivi-shell.h
libweston/: backend-classic.c  backend-flexible.c  bindings.c  capture-proxy.c  compositor-drm.c  compositor-ias.c  compositor-ias.h  compositor-wayland.c  compositor-x11.c  compositor.c  compositor.h  data-device.c  gl-renderer.c  gl-renderer.h  ias-backend.h  ias-common.h  ias-config.c  ias-hmi.c  ias-hmi.h  ias-plugin-framework-definitions.h  ias-plugin-framework.c  ias-plugin-framework.h  ias-relay-input.c  ias-relay-input.h  ias-shell-config.c  ias-shell.c  ias-shell.h  ias-sprite.c  ias-sprite.h  ias-spug.c  ias-spug.h  input.c  ivi-plugin-framework.c  libinput-seat.c  libweston-internal.h  meson.build  pixman-renderer.c  trace-reporter.c  trace-reporter.h  vaapi-recorder.c  (+8 more)
libweston-desktop/: meson.build
libweston/backend-drm/: drm.c  fb.c  libbacklight.c
libweston/backend-ias/: capture-proxy.h  classic.c  flexible.c  ias-sprite.c  ias.c  meson.build
libweston/backend-wayland/: wayland.c
libweston/backend-x11/: x11.c
libweston/plugin-framework/: ias-plugin-framework-private.h  ias-plugin-framework.c  ias-spug.c  ivi-plugin-framework.c  meson.build
libweston/renderer-gl/: gl-renderer.c  gl-renderer.h  meson.build  vm-shared.h  vm.c  vm.h
man/: meson.build
packaging/: config_parameters  ias_dualscreen.conf  weston.spec
plugins/: cursor_image.h  grid_layout.c  meson.build
plugins/cpp_example/: .gitignore  cpp_example.diff  meson.build
plugins/early_camera/: early_camera_plugin.c  new-extension.xml
plugins/extension_sample/: .gitignore  extension_sample.diff  extension_test_client.c  meson.build  new-extension.xml
plugins/gamma_example/: meson.build  surface_gbc_control.c
plugins/input/: input.c  meson.build
plugins/sprite_example/: meson.build  sprite_example.c
plugins/thumbnail/: meson.build  thumbnail_layout.c
private/doc/: 01_icd.md  02_changes.md  51_config.md
protocol/: ias-backend.xml  ias-input-manager.xml  ias-layout-manager.xml  ias-shell.xml  ivi-application.xml  meson.build  trace-reporter.xml
public/doc/: 01_icd.md  11_idl.md  51_config.md  61_analysis.md  99_Glossary.md
shared/: cairo-util.c  config-parser.c  config-parser.h  file-util.c  option-parser.c  weston-egl-ext.h
tests/: ivi-layout-test-plugin.c  linux-explicit-synchronization-test.c
wcap/: main.c  meson.build
xwayland/: window-manager.c
